# BackupGUI

./: .gitignore  Cargo.toml  License.md  OFL.txt  README.md
src/: framework.rs  gui.rs  main.rs  shader.frag  shader.vert  text.rs  texture.frag  texture.vert
src/files/: mod.rs  tracked_reader.rs
src/ui/: align.rs  consent.rs  filetree.rs  mainmenu.rs  mod.rs  options.rs  purge.rs  upload.rs
