[package]
name = "backup_gui_wgpu"
version = "0.1.0"
authors = ["Kongou <kongou@shipfu.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.5.2"
winit = "0.22.1"
futures = "0.3"
log = "0.4"
env_logger = "0.7"
zerocopy = "0.3"
glsl-to-spirv = "0.1"

wgpu_glyph = "0.9.0"
image = "0.23.7"
nanoserde = "0.1.17"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8"}

